Updated version to 1.5.1-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>com.rometools</groupId>
 		<artifactId>rome-parent</artifactId>
-		<version>1.5.0</version>
+		<version>1.5.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>rome-utils</artifactId>
 	<packaging>jar</packaging>
-	<version>1.5.0</version>
+	<version>1.5.1-SNAPSHOT</version>
 
 	<name>rome-utils</name>
 
