[maven-release-plugin] prepare release rome-utils-1.5.1

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<artifactId>rome-utils</artifactId>
 	<packaging>jar</packaging>
-	<version>1.5.1-SNAPSHOT</version>
+	<version>1.5.1</version>
 
 	<name>rome-utils</name>
 
